k8s/apps/k3s-snapshot/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k3s-snapshot
  labels:
    app.kubernetes.io/name: k3s-snapshot
    app.kubernetes.io/component: backup
